# yoagent

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  book.toml
.github/workflows/: ci.yml  publish.yml
docs/: SUMMARY.md  introduction.md
docs/architecture/: overview.md
docs/blog/: twitter-thread.md  yoagent-vs-pi-agent-core.md
docs/concepts/: agent-loop.md  callbacks.md  context-management.md  gasp.md  messages-events.md  persistence.md  prompt-caching.md  retry.md  session-trees.md  skills.md  structured-outputs.md  sub-agents.md  telemetry.md  tools.md
docs/getting-started/: installation.md  quick-start.md
docs/guides/: mcp.md  openapi.md
docs/providers/: anthropic.md  azure-openai.md  bedrock.md  google.md  model-presets.md  openai-compat.md  opencode.md  overview.md
docs/reference/: api.md  configuration.md  tools.md
examples/: basic.rs  callbacks.rs  cli.rs  code_review.rs  gasp_emit.rs  persistence.rs  rlm.rs  shared_state.rs  sub_agent.rs  telemetry.rs
scripts/: install-hooks.sh  pre-commit
src/: agent.rs  agent_loop.rs  context.rs  gasp.rs  lib.rs  retry.rs  session.rs  shared_state.rs  skills.rs  sub_agent.rs  types.rs
src/mcp/: client.rs  mod.rs  tool_adapter.rs  transport.rs  types.rs
src/openapi/: adapter.rs  mod.rs  types.rs
src/provider/: anthropic.rs  azure_openai.rs  bedrock.rs  google.rs  google_vertex.rs  mock.rs  mod.rs  model.rs  openai_compat.rs  openai_responses.rs  registry.rs  sse.rs  traits.rs
src/tools/: bash.rs  edit.rs  file.rs  list.rs  mod.rs  search.rs  shared_state_tool.rs
tests/: agent_loop_test.rs  agent_test.rs  anthropic_stream_test.rs  gasp_test.rs  google_stream_test.rs  integration_anthropic.rs  integration_gemini.rs  integration_opencode.rs  openai_compat_stream_test.rs  openapi_test.rs  serialization_test.rs  session_test.rs  shared_state_test.rs  sub_agent_test.rs  telemetry_test.rs  tools_test.rs
