[package]
name = "yoagent"
version = "0.4.0"
edition = "2021"
description = "Simple, effective agent loop with tool execution and event streaming"
license = "MIT"
repository = "https://github.com/yologdev/yoagent"
homepage = "https://yologdev.github.io/yoagent/"
documentation = "https://yologdev.github.io/yoagent/"
readme = "README.md"
keywords = ["agent", "llm", "ai", "tools", "streaming"]
categories = ["api-bindings", "asynchronous"]
authors = ["Yuanhao <yuanhao@yolog.dev>"]
rust-version = "1.75"
exclude = ["docs/images/*", "docs/theme/*", ".github/*", "scripts/*"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
futures = "0.3"
rand = "0.10.0"
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
